--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -162,6 +162,7 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="actionSaveLabels"/>
    </widget>
    <addaction name="menuFile"/>
   </widget>
@@ -169,6 +170,11 @@
   <action name="actionOpen">
    <property name="text">
     <string>Open</string>
+   </property>
+  </action>
+  <action name="actionSaveLabels">
+   <property name="text">
+    <string>Save Labels As...</string>
    </property>
   </action>
  </widget>
