--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -162,6 +162,8 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen"/>
+    <addaction name="separator"/>
+    <addaction name="actionOpenLabels"/>
     <addaction name="actionSaveLabels"/>
    </widget>
    <addaction name="menuFile"/>
@@ -169,12 +171,17 @@
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpen">
    <property name="text">
-    <string>Open</string>
+    <string>Open Audio File</string>
    </property>
   </action>
   <action name="actionSaveLabels">
    <property name="text">
-    <string>Save Labels As...</string>
+    <string>Export Labels As...</string>
+   </property>
+  </action>
+  <action name="actionOpenLabels">
+   <property name="text">
+    <string>Import Labels</string>
    </property>
   </action>
  </widget>
